--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -1,8 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid p-5">
   <div class="row d-flex justify-content-center">
-
-    <div class="col-md-12 mt-5 mb-5">
-      <form class="form card" action="">
+    <div class="col-md-4">
+      <form class="card p-4 form-group" action="">
 
         <div class="card-top">
           <h1 class="text-center txt-marrom">Entrar</h1>
@@ -12,7 +11,7 @@
         <div class="form-group">
           <label for="email">E-mail</label>
           <input [(ngModel)]="usuarioLogin.email" class="form-control" type="email" name="email" id="email"
-            placeholder="Entre com seu email">
+            placeholder="Entre com seu e-mail">
         </div>
 
         <div class="form-group">
