--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -36,8 +36,8 @@
             <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
               que possuem pets disponíveis para adoção.
             </p>
-            <p><a routerLink="/cadastrar" class="font-weight-bold cor-marrom">Cadastre-se</a> ou <a routerLink="/entrar"
-                class="font-weight-bold cor-marrom">entre</a> se já possui uma conta!</p>
+            <p><a routerLink="/cadastrar" class="font-weight-bold txt-marrom">Cadastre-se</a> ou <a routerLink="/entrar"
+                class="font-weight-bold txt-marrom">entre</a> se já possui uma conta!</p>
           </div>
 
         </div>
@@ -57,8 +57,7 @@
         alt="Imagem de capa do card">
       <div class="card-body">
         <h5 class="card-title">Missão</h5>
-        <p class="card-text">Nossa missão é facilitar a busca de bons lares para os animais, diminuindo o número de
-          abandonos nas ruas. </p>
+        <p class="card-text">Facilitar a busca de bons lares para os animais, diminuindo o número de abandonos nas ruas. </p>
       </div>
     </div>
 
@@ -67,8 +66,7 @@
         alt="Imagem de capa do card">
       <div class="card-body">
         <h5 class="card-title">Visão</h5>
-        <p class="card-text">Nossa visão é a de que todos os animais têm algo de especial a oferecer, independente da
-          raça ou idade. </p>
+        <p class="card-text">Enxergar que todos os animais têm algo de especial a oferecer, independente da raça ou idade. </p>
       </div>
     </div>
 
@@ -77,8 +75,7 @@
         alt="Imagem de capa do card">
       <div class="card-body">
         <h5 class="card-title">Valores</h5>
-        <p class="card-text">Nossos valores são o de acreditar que vidas não devem ser vendidas, por isso devemos
-          valorizar a adoção. </p>
+        <p class="card-text">Acreditar que vidas não devem ser vendidas, por isso se deve valorizar a adoção. </p>
       </div>
     </div>
   </div>
