--- a/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.css
+++ b/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.css
@@ -1,12 +1,15 @@
-.card-postagem {
-    box-shadow: 1px 1px 5px #A27E6E;
-    background-color: #A27E6E;
-    padding: 20px;
-    border-radius: 20px;
-    width: 600px;
-  }
-  .card-publicacao {
-    background-color: #E0C1AD;
-    border-radius: 0px;
-    padding: 10px;
-  }
+.card {
+  box-shadow: 1px 1px 5px #E0C1AD;
+  background-color: #E0C1AD;
+  width: 100%;
+}
+
+.card-header {
+  background-color: #A27E6E;
+}
+
+.card-foto {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
