--- a/redePets-frontend/src/app/component/edit/postagem-edit/postagem-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/postagem-edit/postagem-edit.component.html
@@ -1,46 +1,43 @@
-<div class="container mt-5 mb-5 card-publicacao">
+<div class="container mt-5 mb-5 p-5 cor-bege">
 
- <div class="row">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center">Atualizar postagem</h1>
+    </div>
+  </div>
 
- <div class="col-md-12">
-<br>
-    <h1 class="text-center ">Atualizar Postagem</h1>
-</div>
-</div>
-<div class="row d-flex justify-content-center">
+  <div class="row d-flex justify-content-center">
     <div class="col-md-6">
 
-        <div class="form-group">
-            <label for="titulo">Título</label>
-            <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
-            </div>
+      <div class="form-group">
+        <label for="titulo">Título</label>
+        <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Informe o título">
+      </div>
 
-            <div class="form-group">
-                <label for="texto">Texto</label>
-               <textarea [(ngModel)]="postagem.texto"class="form-control" name="texto" id="texto" rows="3"></textarea>
-                </div>
+      <div class="form-group">
+        <label for="texto">Texto</label>
+        <textarea [(ngModel)]="postagem.texto" class="form-control" name="texto" id="texto" rows="3" placeholder="Informe o texto da postagem. Não se esqueça de deixar um número de telefone para contato."></textarea>
+      </div>
 
-                <div class="form-group">
-                    <label for="imagem" >Imagem</label>
-                    <input [(ngModel)]="postagem.imagem" type="text" class="form-control" id="imagem"
-                      placeholder="Coloque o link da sua imagem">
-                  </div>
+      <div class="form-group">
+        <label for="imagem">Imagem</label>
+        <input [(ngModel)]="postagem.imagem" type="text" class="form-control" id="imagem" placeholder="Informe o link da sua imagem">
+      </div>
 
-                  <div class="form-group">
-                    <label for="tema" >Escolha um tema:</label>
-                    <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
-                      <option *ngFor="let tema of listaTemas" value="{{tema.id}}">{{tema.nome}}
-                      </option>
-                    </select>
-                  </div>
+      <div class="form-group">
+        <label for="tema">Escolha um tema</label>
+        <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
+          <option *ngFor="let tema of listaTemas" value="{{tema.id}}">{{tema.nome}}</option>
+        </select>
+      </div>
 
-                <div class="d-flex justify-content-center mt-4 ">
-                    <button class="btn btn-outline-dark mr-4" routerLink="/inicio">Cancelar</button>
-                    <button class="btn btn-outline-dark" (click)="atualizar()">Atualizar</button>
+      <div class="d-flex justify-content-center mt-4">
+        <button class="btn btn-outline-dark mr-4" routerLink="/inicio">Cancelar</button>
+        <button class="btn btn-outline-dark" (click)="atualizar()">Atualizar</button>
 
-                </div>
+      </div>
 
     </div>
-</div>
-<br>
+  </div>
+  <br>
 </div>
