--- a/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
@@ -1,8 +1,8 @@
-<div class="container mt-5 mb-5 cor-bege p-0 card-publicacao">
-<br>
+<div class="container mt-5 mb-5 p-5 cor-bege">
+
   <div class="row">
     <div class="col-md-12">
-      <h1 class="text-center  ">Atualizar tema</h1>
+      <h1 class="text-center">Atualizar tema</h1>
     </div>
   </div>
 
@@ -13,23 +13,24 @@
         <!--
         <label for="nome">Nome do tema</label>
         -->
-        <input type="text" class="form-control" id="nome" [(ngModel)]="tema.nome">
+        <input [(ngModel)]="tema.nome" type="text" class="form-control" id="nome" placeholder="Informe o nome do tema">
       </div>
 
       <!--
       <div class="form-group">
         <label for="descricao">Descrição</label>
-        <input type="text" class="form-control" id="descricao" [(ngModel)]="tema.descricao">
+        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao">
       </div>
       -->
-
-      <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-dark mr-3" routerLink="/tema">Cancelar</button>
-        <button class="btn btn-outline-dark" (click)="atualizar()">Atualizar</button>
-      </div>
 
     </div>
   </div>
 
-<br>
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-center">
+      <button class="btn btn-outline-dark mr-3" routerLink="/tema">Cancelar</button>
+      <button class="btn btn-outline-dark" (click)="atualizar()">Atualizar</button>
+    </div>
+  </div>
+
 </div>
