--- a/redePets-frontend/src/app/component/menu/menu.component.html
+++ b/redePets-frontend/src/app/component/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark cor-marrom-claro">
-  
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNav"
     aria-controls="conteudoNav" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
@@ -12,17 +12,17 @@
           <!--<img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
         </li>
         <li class="nav-item pl-3">
-          <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
+          <p class="m-0 font-weight-bold text-white">{{nome}}</p>
         </li>
         <li class="nav-item pl-3">
           <a href="">
-            <p class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o " aria-hidden="true"></i></p>
+            <p class="text-white m-0"><i class="fa fa-pencil-square-o " aria-hidden="true"></i></p>
           </a>
         </li>-->
       </ul>
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
-          <a (click)="sair()" class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out"
+          <a (click)="sair()" class="m-0 font-weight-bold text-white">Sair <i class="fa fa-sign-out"
               aria-hidden="true"></i></a>
         </li>
       </ul>
