--- a/redePets-frontend/src/app/component/tema/tema.component.html
+++ b/redePets-frontend/src/app/component/tema/tema.component.html
@@ -4,23 +4,23 @@
     <div class="col-md-12 txt-marrom">
 
       <a routerLink="/inicio" class="text-dark text-left">
-        <i class="fa fa-angle-double-left" aria-hidden="true"></i> Início
+        <i class="fa fa-arrow-left" aria-hidden="true"></i> Início
       </a>
 
       <h1 class="fs-54 text-center">Temas</h1>
 
-      <h5 class="fs-18 text-center">Veja aqui todos os temas cadastrados ou cadastre um novo</h5>
+      <h5 class="fs-16 text-center">Veja aqui todos os temas cadastrados ou cadastre um novo</h5>
 
       <div class="row d-flex justify-content-center mt-4 mb-5">
         <div class="col-md-3">
 
           <div class="form-group">
-            <input [(ngModel)]="tema.nome" type="text" class="form-control" id="nome" placeholder="Digite o nome do tema">
+            <input [(ngModel)]="tema.nome" type="text" class="form-control" id="nome" placeholder="Informe o nome do tema">
           </div>
 
           <!--
           <div class="form-group">
-            <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+            <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Informe a descrição do tema">
           </div>
            -->
 
@@ -67,6 +67,14 @@
             <td class="d-flex justify-content-end">
               <button class="btn btn-outline-dark mr-3" [routerLink]="['/tema/edit', tema.id]">Editar</button>
               <button class="btn btn-outline-dark" [routerLink]="['/tema/delete', tema.id]">Apagar</button>
+            <!--
+            <a class="text-dark align-items-center mr-3" [routerLink]="['/tema/edit', tema.id]">
+              <i class="fa fa-pencil-square-o fs-30" aria-hidden="true"></i>
+            </a>
+            <a class="text-dark align-items-center" [routerLink]="['/tema/delete', tema.id]">
+              <i class="fa fa-trash-o fs-30" aria-hidden="true"></i>
+            </a>
+            -->
             </td>
           </tr>
         </tbody>
